k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: internet-banking
spec:
  ingressClassName: ingress
  rules:
  - http:
      paths:
      - path: /user
        pathType: Prefix
        backend:
          service:
            name: user-svc
            port:
              number: 5001
      - path: /bank_account
        pathType: Prefix
        backend:
          service:
            name: bank-account-svc
            port:
              number: 5002
      - path: /credit_card
        pathType: Prefix
        backend:
          service:
            name: credit-card-svc
            port:
              number: 5003
      - path: /investment
        pathType: Prefix
        backend:
          service:
            name: investment-svc
            port:
              number: 5004
